# TrustedRouter-Fusion-Draco

./: .gitignore  LICENSE  README.md  blog-fusion-draco.md  blog-selffusion-draco.md  pyproject.toml
data/: draco-financial-20.manifest.json  draco-full-100.manifest.json  draco-non-financial-80.manifest.json
docs/: FINDINGS.md  LESSONS.md
replays/: README.md  fusion-budget-opus.jsonl  fusion-frontier-deepseek.jsonl  fusion-frontier-gemma4.jsonl  fusion-frontier-glm.jsonl  fusion-frontier-gpt55.jsonl  fusion-frontier-kimi.jsonl  fusion-frontier-minimax.jsonl  fusion-frontier-opus.jsonl  fusion-openweights-m3.jsonl  fusion-selffusion-m3-x10.jsonl  fusion-selffusion-sonnet.jsonl  solo-gemini-31-pro.jsonl  solo-gemini-flash.jsonl  solo-gpt55.jsonl  solo-kimi.jsonl  solo-opus.jsonl
results/: native-fusion-or-budget-opus-sample10-report.json  rejudge-agentic-deepseek-tooled-v3-15.jsonl  rejudge-agentic-kimi-tooled-v3-15.jsonl  rejudge-finance20-secfacts.jsonl  rejudge-frontier-deepseek-fuser.jsonl  rejudge-frontier-gemma4-fuser.jsonl  rejudge-frontier-kimi-fuser.jsonl  rejudge-frontier-minimax-fuser.jsonl  rejudge-fusion-client-budget-opus-full100.jsonl  rejudge-openweights-m3-fuser.jsonl  rejudge-selffusion-haiku-pilot.jsonl  rejudge-selffusion-haiku-rem18.jsonl  rejudge-selffusion-m3-2run-hitemp.jsonl  rejudge-selffusion-m3-2run.jsonl  rejudge-selffusion-m3-x10.jsonl  rejudge-selffusion-m3-x3.jsonl  rejudge-selffusion-m3-x4.jsonl  rejudge-selffusion-m3-x5.jsonl  rejudge-selffusion-m3-x6.jsonl  rejudge-selffusion-m3-x7.jsonl  rejudge-selffusion-m3-x8.jsonl  (+7 more)
(+68 files in other folders)
