[project]
name = "trustedrouter-fusion-draco"
version = "0.1.0"
description = "Reproduction of OpenRouter's Fusion DRACO deep-research benchmark on TrustedRouter, with an agentic web_search / web_fetch / bash harness."
requires-python = ">=3.12"
dependencies = [
    "trusted-router-py>=0.3.0",  # our SDK — every gateway call goes through it
    "httpx",                     # Exa search + web_fetch only (not the gateway)
    "markitdown[all]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trusted_router"]

[tool.uv]
package = true
